--- a/src/main/resources/templates/productform.html
+++ b/src/main/resources/templates/productform.html
@@ -6,42 +6,7 @@
 
     <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
 
-    <!-- Расчет цены, если выбрана в списке цена с типом "Расчетная" -->
-    <script type="text/javascript">
-
-        jQuery(document).ready(function () {
-//            if ($('#is_calculated').is(':checked')) {
-//                $('#calculated').css('display', 'block');
-//            } else {
-//                $('#calculated').css('display', 'none');
-//            }
-
-            $('#priceId').change(function () {
-                var mult = $('option:selected', this).attr('myTag');
-                var basePriceId = $('#basePriceId').val();
-                var basePriceValue = $('#basePriceValue').val();
-                if (basePriceId != null &amp;&amp; basePriceId != 0) {
-
-                    $('#priceValue').value = basePriceValue * (mult / 100);
-                }
-//                if (mult != null || mult != 0) {
-//                    $('#priceValue').val(mult);
-//                }
-//        if (this.checked)
-//            $('#calculated').show();
-//        else
-//            $('#calculated').hide();
-//
-            });
-
-        });
-        //        function showCalculatedField() {
-        //            if ($('#is_calculated').is(':checked'))
-        //                $('#calculated').show();
-        //            else
-        //                $('#calculated').hide();
-        //        }
-    </script>
+    <script type="text/javascript" src="/js/app.js" th:src="@{/js/app.js}"></script>
 
 </head>
 <body>
