--- a/src/main/resources/templates/priceform.html
+++ b/src/main/resources/templates/priceform.html
@@ -10,12 +10,14 @@
     <script type="text/javascript">
 
         jQuery(document).ready(function () {
+            // При открытии формы проверяет расчетная цена или нет
             if ($('#is_calculated').is(':checked')) {
                 $('#calculated').css('display', 'block');
             } else {
                 $('#calculated').css('display', 'none');
             }
 
+            //При щелчке на чекбоксе показывает скрытые поля
             $('#is_calculated').change(function () {
                 if (this.checked)
                     $('#calculated').show();
@@ -25,12 +27,7 @@
             });
 
         });
-        //        function showCalculatedField() {
-        //            if ($('#is_calculated').is(':checked'))
-        //                $('#calculated').show();
-        //            else
-        //                $('#calculated').hide();
-        //        }
+
     </script>
 
 </head>
@@ -89,7 +86,7 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label" th:text="#{price.type_multipler} + ':'"></label>
                     <div class="col-sm-10">
-                        <input type="number" class="form-control" th:field="*{multipler}"/>
+                        <input type="number" min="0" class="form-control" th:field="*{multipler}"/>
                     </div>
                 </div>
             </div>
