--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -34,6 +34,7 @@
                                 <li><a href="#" th:href="@{/products}" th:text="#{header.navbar.dropdown_item1}"></a></li>
                                 <li><a href="#" th:href="@{/prices}" th:text="#{header.navbar.dropdown_item2}"></a></li>
                                 <li><a href="#" th:href="@{/units}" th:text="#{header.navbar.dropdown_item3}"></a></li>
+                                <li><a href="#" th:href="@{/contractors}" th:text="#{header.navbar.dropdown_item4}"></a></li>
                                 <!--<li class="divider"></li>-->
                                 <!--<li><a href="#">Отдельная ссылка</a></li>-->
                             </ul>
